--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -1,3 +1,4 @@
+
 body {
   max-width: 100%;
   margin: 0 auto;
@@ -91,7 +92,7 @@ h2 /*subtitles*/ {
 }
 
 a /*links*/ {
-  color: #F4F5F0;
+  color: white;
   text-decoration: underline;
 }
 
@@ -114,10 +115,6 @@ figure {  /*treat figure and what is inside it as a block*/
 figcaption {
   font-size: 14px;
   text-align: center;
-}
-
-p {
-    margin: 2cm 4cm 3cm 4cm;
 }
 
 /*div container for the 3 images and captions using the flex model, check it out after*/
@@ -158,7 +155,7 @@ And the rules are basically a repetition of what you have above but with other s
 
 @media (max-width: 800px) {
     body {
-        width: 100%;
+        width: 80%;
     }
 
     .title {
