--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -1,4 +1,3 @@
-
 body {
   max-width: 100%;
   margin: 0 auto;
@@ -92,7 +91,7 @@ h2 /*subtitles*/ {
 }
 
 a /*links*/ {
-  color: #FFFFFF;
+  color: white;
   text-decoration: underline;
 }
 
