--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -7,6 +7,10 @@ body {
   background-color: #FFFFFF;
 }
 
+p {
+    margin: 2cm 4cm 3cm 4cm;
+}
+
 
 /******************************************************
 *******************************************************
