--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -8,7 +8,7 @@ body {
 }
 
 p {
-    margin: 2cm 4cm 3cm 4cm;
+    margin: 2cm 2cm 2cm 2cm;
 }
 
 
@@ -95,7 +95,7 @@ h2 /*subtitles*/ {
 }
 
 a /*links*/ {
-  color: #000000;
+  color: white;
   text-decoration: underline;
 }
 
