--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -138,9 +138,10 @@ figcaption {
 footer {
   width: 100%;
   height: 100px;
-  background-color: black;
-  color: white;
+  background-color: #000000;
+  color: #F4F5F0;
   text-align: center;
+  padding: 20px;
   font-family: 'Montserrat', sans-serif;
 }
 
