--- a/css/powerstyle2.css
+++ b/css/powerstyle2.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Helvetica', sans-serif;
   font-size: 20px;
   line-height: 1.5;
-  background-color: #FFFFFF;
+  background-color: #DFDDD7;
 }
 
 p {
